added shape class stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(nanovg)
 
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmax-errors=5")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors -fmax-errors=5")
 
@@ -13,13 +14,12 @@ find_package(glfw3 REQUIRED CONFIG)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 
-#message(STATUS ${OPENGL_INCLUDE_DIR})
-
 include_directories(
     ${OPENGL_INCLUDE_DIR}
     ${PROJECT_SOURCE_DIR}/dep/nanovg/src
     ${PROJECT_SOURCE_DIR}/dep/nanovg/example
     ${PROJECT_SOURCE_DIR}/dep
+    ${PROJECT_SOURCE_DIR}/include
 )
 
 file(GLOB nanovg_SRC
@@ -28,9 +28,16 @@ file(GLOB nanovg_SRC
     ${PROJECT_SOURCE_DIR}/dep/nanovg/example/demo.c
 )
 
-set(SOURCES 
-    ${nanovg_SRC}
+file(GLOB project_SRC
+    ${CMAKE_SOURCE_DIR}/src/*.cpp
 )
 
+set(SOURCES 
+    ${nanovg_SRC}
+    ${project_SRC}
+)
+
+#set_property(TARGET nanovg PROPERTY CXX_STANDARD 17)
 add_executable(nanovg src/main.cpp ${SOURCES} )
 target_link_libraries(nanovg OpenGL::GL GLEW::GLEW glfw ${CMAKE_DL_LIBS})
+target_compile_features(nanovg PUBLIC cxx_std_17)
