added libs and update CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,14 @@ cmake_minimum_required(VERSION 3.16)
 
 project(nanovg)
 
-
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmax-errors=5")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors -fmax-errors=5")
 
 add_definitions(-DNANOVG_GL3)
 add_definitions(-DNANOVG_USE_GLEW)
 #add_definitions(-DDEMO_MSAA)
+
+list(APPEND CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/dep/glfw-3.3.7/lib/cmake)
 
 find_package(glfw3 REQUIRED CONFIG)
 find_package(OpenGL REQUIRED)
@@ -39,9 +40,10 @@ set(SOURCES
     ${project_SRC}
 )
 
-#set_property(TARGET nanovg PROPERTY CXX_STANDARD 17)
+
+file(COPY ${CMAKE_SOURCE_DIR}/bin/glew32.dll DESTINATION ${CMAKE_SOURCE_DIR}/build)
+
 add_executable(nanovg src/main.cpp ${SOURCES} )
-#target_link_libraries(nanovg OpenGL::GL GLEW::GLEW glfw ${CMAKE_DL_LIBS})
-#target_link_libraries(nanovg OpenGL::GL glfw ${CMAKE_DL_LIBS} ${CMAKE_SOURCE_DIR}/lib/libglew32.dll.a)
-target_link_libraries(nanovg OpenGL::GL glfw ${CMAKE_DL_LIBS} glew32)
+#target_link_libraries(nanovg OpenGL::GL glfw ${CMAKE_DL_LIBS} glew32)
+target_link_libraries(nanovg OpenGL::GL glfw ${CMAKE_DL_LIBS} ${CMAKE_SOURCE_DIR}/dep/glew-2.1.0/lib/libglew32.dll.a)
 target_compile_features(nanovg PUBLIC cxx_std_17)
